# spotify-curator

./: .env.example  .env.lambda.example  .gitignore  AGENTS.md  MANIFEST.md  Makefile  README.md  docker-compose.gpu.yml  docker-compose.lambda.yml  docker-compose.yml
core/: alembic.ini  pyproject.toml
core/.pytest_tmp/: test_api_error_envelopecurrent  test_assert_no_running_job_aftcurrent  test_backfill_updates_cover_frcurrent  test_batch_feature_statuscurrent  test_cancel_preview_resolve_agcurrent  test_cancel_preview_resolve_cacurrent  test_cancel_running_enrichmentcurrent  test_count_query_uses_minimal_current  test_coverage_empty_librarycurrent  test_coverage_recent_failurescurrent  test_coverage_with_featurescurrent  test_create_full_snapshotcurrent  test_detail_actioncurrent  test_detail_not_foundcurrent  test_diff_api_endpointcurrent  test_diff_liked_and_statusescurrent  test_diff_missing_snapshotcurrent  test_docker_checks_persistedcurrent  test_download_deezer_preview_mcurrent  test_download_job_createdcurrent  test_download_selection_skips_current  test_dry_run_action_too_largecurrent  test_dry_run_create_backup_placurrent  test_dry_run_creates_library_acurrent  test_dry_run_filter_basedcurrent  test_dry_run_restore_liked_tracurrent  test_dry_run_unlike_trackscurrent  test_duplicates_api_has_cover_current  test_duplicates_isrc_two_uniqucurrent  test_enrich_api_endpointcurrent  test_enrich_force_refreshcurrent  test_enrich_idempotent_only_micurrent  test_enrich_only_missingcurrent  test_enrich_retry_failedcurrent  test_export_api_routescurrent  (+71 more)
(+577 files in other folders)
