[project]
name = "spotify-curator-core"
version = "0.0.0"
description = "Core API for Spotify Library Curator & Playlist Engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "httpx>=0.27",
  "tenacity>=8.2",
  "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=prepend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

